# csp-paperback

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  requirements_v1.1.md  requirements_v1.2.md  vite.config.ts
.claude/: settings.local.json
assets/: core-BOxVy6Z1.js  core-CAAXTyIW.js  core-OnoVqSWo.js  dist-js-BWjUF2kG.js  dist-js-Bt5cU3Uc.js  dist-js-C6vEPx6b.js  dist-js-CBhOX-bx.js  dist-js-CEoq7Z8G.js  dist-js-CFmDEQax.js  dist-js-CNLi7WRv.js  dist-js-CkjpFW76.js  dist-js-CyEvTfUU.js  dist-js-D2fXnqrP.js  dist-js-DD4lNtD2.js  dist-js-DhCQwY4-.js  dist-js-Dkm1EoW_.js  dist-js-VDYkknub.js  dist-js-amhXfK2z.js  dist-js-dvAad3KL.js  dist-js-mlsISF2v.js  dist-js-tvnpi6QN.js  index-0NqWc-oR.css  index-1z07R-BX.js  index-B-vXelHm.js  index-B2XdgLHM.css  index-B7APD1sY.js  index-B9d8tBzB.js  index-BBtYo0q9.js  index-BEaZHEIn.css  index-BHdeEcNp.js  index-BIYpqo96.js  index-BO2vu205.js  index-BTi_G7Yl.js  index-BUsLnUP9.js  index-B_qJhKJ_.js  index-BbZ1NikI.js  index-BdPUFXGr.js  index-Ber_p_w4.js  index-BgP2UU--.css  index-Bh7PWoGd.js  (+76 more)
docs/: compositing-engine.md  compositing.md  desktop-release.md  workflow.md
e2e/: export-settings-and-output.spec.ts  help.spec.ts
scripts/: audit-artifacts.mjs  copy-local-exe.mjs  generate-collision-fixture.mjs  generate-context-pruning-fixture.mjs  sync-build-version.mjs  tauri-build-with-remap.mjs
src/: App.css  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+184 files in other folders)
